--- a/crud-node-express/docker-compose.yml
+++ b/crud-node-express/docker-compose.yml
@@ -11,12 +11,17 @@ services:
 
   app:
     build: .
+    image: ihusnianali/node-crud-app
     ports:
-      - 4000:3000
+      - 3000:3000
     environment:
       APP_NAME: LearnDocker
       PORT: 3000
-      DB_URI: mongodb://mongo_db:27017/dockerlearn
+      DB_USER: mongo
+      DB_PASSWORD: password
+      DB_NAME_IP: mongo_db
+      DB_PORT: 27017
+      DB_NAME: node-crud-app
     depends_on:
       - mongo_db
 
