--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -19,11 +19,10 @@ jobs:
           node-version: '18'
 
       - name: Install dependencies
-        run: npm install
-
-      - name: Run tests
-        run: npm test
-
+        run: |
+          cd UserManager-CRUD  # Change to the correct directory
+          npm install
+        
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
