--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -3,7 +3,7 @@ name: Node.js Docker CI/CD Pipeline
 on:
   push:
     branches:
-      - main  
+      - main  # Trigger the pipeline on push to the 'main' branch
 
 jobs:
   build:
@@ -19,10 +19,9 @@ jobs:
           node-version: '18'
 
       - name: Install dependencies
-        run: npm install
-
-      - name: Run tests
-        run: npm test
+        run: |
+          cd crud-node-express  # Change to the correct directory
+          npm install
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
@@ -31,7 +30,9 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/node-app:latest .
+        run: |
+          cd UserManager-CRUD
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/node-app:latest .
 
       - name: Push Docker image to Docker Hub
         run: docker push ${{ secrets.DOCKER_USERNAME }}/node-app:latest
