Updated yml file
Updated yml file

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -32,7 +32,12 @@ jobs:
       - name: Build Docker image
         run: |
           cd crud-node-express
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/node-app:latest .
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/node-crud-app .
+
+      - name: Docker Image Tag
+        run: |
+          cd crud-node-express
+          docker tag node-crud-app:latest ${{ secrets.DOCKER_USERNAME }}/node-crud-app:latest
 
       - name: Push Docker image to Docker Hub
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/node-app:latest
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/node-crud-app:latest
