--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -30,7 +30,10 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/node-crud-app .
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/node-crud-app:latest .
+
+      - name: Docker Image Tag
+        run: docker tag node-crud-app:latest ${{ secrets.DOCKER_USERNAME }}/node-crud-app:latest
 
       - name: Push Docker image to Docker Hub
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/node-crud-app
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/node-crud-app:latest
