--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -30,7 +30,9 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/node-crud-app:latest .
+        run: |
+          cd crud-node-express  # Change to the correct directory
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/node-crud-app:latest .
 
       - name: Docker Image Tag
         run: docker tag node-crud-app:latest ${{ secrets.DOCKER_USERNAME }}/node-crud-app:latest
