--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -31,11 +31,15 @@ jobs:
 
       - name: Build Docker image
         run: |
-          cd crud-node-express  # Change to the correct directory
+          cd crud-node-express
           docker build -t ${{ secrets.DOCKER_USERNAME }}/node-crud-app:latest .
 
       - name: Docker Image Tag
-        run: docker tag node-crud-app:latest ${{ secrets.DOCKER_USERNAME }}/node-crud-app:latest
+        run: |
+          cd crud-node-express
+          docker tag node-crud-app:latest ${{ secrets.DOCKER_USERNAME }}/node-crud-app:latest
 
       - name: Push Docker image to Docker Hub
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/node-crud-app:latest
+        run: |
+          cd crud-node-express
+          docker push ${{ secrets.DOCKER_USERNAME }}/node-crud-app:latest
