--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -35,11 +35,7 @@ jobs:
           docker build -t ${{ secrets.DOCKER_USERNAME }}/node-crud-app:latest .
 
       - name: Docker Image Tag
-        run: |
-          cd crud-node-express
-          docker tag node-crud-app:latest ${{ secrets.DOCKER_USERNAME }}/node-crud-app:latest
+        run: docker tag ${{ secrets.DOCKER_USERNAME }}/node-crud-app:latest ${{ secrets.DOCKER_USERNAME }}/node-crud-app:latest
 
       - name: Push Docker image to Docker Hub
-        run: |
-          cd crud-node-express
-          docker push ${{ secrets.DOCKER_USERNAME }}/node-crud-app:latest
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/node-crud-app:latest
