--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -3,7 +3,7 @@ name: Node.js Docker CI/CD Pipeline
 on:
   push:
     branches:
-      - main  # Trigger the pipeline on push to the 'main' branch
+      - main  
 
 jobs:
   build:
@@ -23,19 +23,13 @@ jobs:
           cd crud-node-express  # Change to the correct directory
           npm install
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Set environment variables
+        run: |
+          echo "DOCKER_USERNAME=${{ secrets.DOCKER_USERNAME }}" >> $GITHUB_ENV
+          echo "DOCKER_PASSWORD=${{ secrets.DOCKER_PASSWORD }}" >> $GITHUB_ENV
 
-      - name: Build Docker image
+      - name: Build and Push Docker Image
         run: |
           cd crud-node-express
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/node-crud-app:latest .
-
-      - name: Docker Image Tag
-        run: docker tag ${{ secrets.DOCKER_USERNAME }}/node-crud-app:latest ${{ secrets.DOCKER_USERNAME }}/node-crud-app:latest
-
-      - name: Push Docker image to Docker Hub
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/node-crud-app:latest
+          make login
+          make build-and-push
