--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,7 +5,22 @@
 
 version: 2
 updates:
-  - package-ecosystem: "" # See documentation for possible values
-    directory: "/" # Location of package manifests
+  # Node.js package updates
+  - package-ecosystem: "npm"
+    directory: "/crud-node-express" # Location of package.json
     schedule:
-      interval: "daily"
+      interval: "daily" # Check for updates daily
+    commit-message:
+      prefix: "fix" # Commit message prefix
+    open-pull-requests-limit: 5 # Limit the number of open PRs to 5
+    ignore:
+      - dependency-name: "some-deprecated-package" # Example of ignoring a package
+
+  # Docker image updates
+  - package-ecosystem: "docker"
+    directory: "/" # Location of your Dockerfile
+    schedule:
+      interval: "daily" # Check for updates daily
+    commit-message:
+      prefix: "fix" # Commit message prefix
+    open-pull-requests-limit: 5 # Limit the number of open PRs to 5
