--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -57,8 +57,8 @@ jobs:
 
       - name: Tag Docker image for ECR
         run: |
-          docker tag ${{ secrets.DOCKER_USERNAME }}/node-crud-app:latest ${{ secrets.AWS_ECR_REGISTRY }}/node-crud-app:latest
+          docker tag ${{ secrets.DOCKER_USERNAME }}/node-crud-app:latest ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/node-crud-app:latest
 
       - name: Push Docker image to ECR
         run: |
-          docker push ${{ secrets.AWS_ECR_REGISTRY }}/node-crud-app:latest
+          docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/node-crud-app:latest
