--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -29,16 +29,21 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      - name: Get Git Commit SHA
+        id: vars
+        run: echo "VERSION=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+
       - name: Build Docker image
         run: |
           cd crud-node-express
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/node-crud-app:latest .
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/node-crud-app:${{ env.VERSION }} .
 
-      - name: Docker Image Tag
-        run: docker tag ${{ secrets.DOCKER_USERNAME }}/node-crud-app:latest ${{ secrets.DOCKER_USERNAME }}/node-crud-app:latest
+      - name: Tag Docker image for ECR
+        run: |
+          docker tag ${{ secrets.DOCKER_USERNAME }}/node-crud-app:${{ env.VERSION }} ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/node-crud-app:${{ env.VERSION }}
 
       - name: Push Docker image to Docker Hub
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/node-crud-app:latest
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/node-crud-app:${{ env.VERSION }}
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -55,10 +60,6 @@ jobs:
         run: |
           aws ecr create-repository --repository-name node-crud-app || echo "Repository already exists"
 
-      - name: Tag Docker image for ECR
-        run: |
-          docker tag ${{ secrets.DOCKER_USERNAME }}/node-crud-app:latest ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/node-crud-app:latest
-
       - name: Push Docker image to ECR
         run: |
-          docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/node-crud-app:latest
+          docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/node-crud-app:${{ env.VERSION }}
